# seria-library

./: .gitignore  .pre-commit-config.yaml  README.md  cliff-template.toml  pyproject.toml
.github/workflows/: create-release.yml  main.yml  poetry-update.yml  ruff-lint.yml  update-deps.yml
seria/: constants.py  logging.py  utils.py
seria/dpy/: ui.py
seria/tortoise/: model.py
