[project]
name = "seria-library"
requires-python = ">=3.11"

[tool.poetry]
authors = ["seriaati <seria.ati@gmail.com>"]
description = "Seria's library (of code)"
license = "GPL-3.0"
name = "seria-library"
packages = [{include = "seria"}]
readme = "README.md"
version = "1.5.0"

[tool.poetry.dependencies]
aiofiles = {version = "^23.2.1", optional = true}
discord-py = "^2.3.2"
orjson = {version = "^3.9.13", optional = true}
python = "^3.11"
pyyaml = {version = "^6.0.1", optional = true}
tortoise-orm = {extras = ["asyncpg"], version = "^0.21.0"}

[tool.poetry.extras]
all = ["discord-py", "aiofiles", "orjson", "pyyaml", "tortoise-orm"]
files = ["aiofiles", "orjson", "pyyaml"]
tortoise = ["tortoise-orm"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"
ruff = "^0.4.0"

[tool.poetry.group.linux]
optional = true

[tool.poetry.group.linux.dependencies]
uvloop = "^0.19.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pyright]
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
