[project]
name = "seria-library"
version = "1.5.4"
description = "Seria's library (of code)"
readme = "README.md"
authors = [{ name = "seria", email = "seria.ati@gmail.com" }]
requires-python = ">=3.11"
dependencies = []
license = { file = "LICENSE" }

[project.optional-dependencies]
all = [
    "aiofiles>=24.1.0",
    "discord-py>=2.5.0",
    "orjson>=3.10.15",
    "pyyaml>=6.0.2",
    "tortoise-orm>=0.24.1",
]
dpy = ["discord-py>=2.5.0"]
files = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.13",
    "orjson>=3.10.15",
    "pyyaml>=6.0.2",
]
tortoise = ["tortoise-orm>=0.24.1"]


[tool.hatch.build.targets.wheel]
packages = ["seria"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
typeCheckingMode = "standard"
